<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".geoQuizUI.EditorMenuActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/editor_menu_card_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editor_menu_card_game_name"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/editor_menu_card_button_publish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editor_menu_card_button_publish_text"
                    android:backgroundTint="@color/button_back"
                    android:textColor="@color/button_text"
                    android:layout_below="@+id/editor_menu_card_game"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/editor_menu_card_button_delete"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    />

                <Button
                    android:id="@+id/editor_menu_card_button_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editor_menu_card_button_delete_text"
                    android:backgroundTint="@color/button_back"
                    android:textColor="@color/button_text"
                    android:layout_below="@+id/editor_menu_card_game"
                    android:layout_toStartOf="@+id/buttonEdit"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    />

                <Button
                    android:id="@+id/buttonEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editor_menu_card_button_edit_text"
                    android:backgroundTint="@color/button_back"
                    android:textColor="@color/button_text"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/editor_menu_card_game"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</RelativeLayout>