<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".geoQuizUI.PlayMenuActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/play_menu_card_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play_menu_card_game_name"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/play_menu_card_button_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:backgroundTint="@color/button_back"
                    android:text="@string/play_menu_card_button_play_text"
                    android:textColor="@color/button_text" />

                <Button
                    android:id="@+id/play_menu_card_button_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/play_menu_card_game"
                    android:layout_marginTop="-40dp"
                    android:layout_marginEnd="24dp"
                    android:layout_toStartOf="@+id/play_menu_card_button_play"
                    android:backgroundTint="@color/button_back"
                    android:text="@string/play_menu_card_button_delete_text"
                    android:textColor="@color/button_text" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>